Added camera to opengl implementation, updated dependencies list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ dependencies = [
   "folium",
   "pyglet",
   "trimesh",
+  "pyopengl",
+  "pyglfw"
+  "pyrr"
+  "pillow"
   "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
   "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop"
 ]
