--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 
     #Placeholder for Docker on our Amazon AWS Runner
     #container:
     #  image: ubuntu-latest
