Trying to fix broken toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
   "pillow"
   "glfw",
   "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
-  "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop",
+  "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop"
 ]
 
 [project.optional-dependencies]
