--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,18 +3,21 @@ requires = ["setuptools", "setuptools-scm", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
+version = "0.7.2"
 name = "dtcc-viewer"
-version = "0.0.1"
 description = "DTCC Viewer"
 readme = "README.md"
-authors = [{ name = "Dag Wästberg", email = "dwastberg@gmail.com" }]
+authors = [
+  { name = "Jens Olsson", email = "jens.olsson@chalmersindustriteknik.se" },
+  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
+]
 requires-python = ">=3.8"
 classifiers = [
   "Intended Audience :: Science/Research",
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: C++",
   "License :: OSI Approved :: MIT License",
 ]
-
 dependencies = [
   "jupyter",
   "ipywidgets",
