--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "setuptools-scm", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.7.2"
+version = "0.7.3"
 name = "dtcc-viewer"
 description = "DTCC Viewer"
 readme = "README.md"
@@ -11,7 +11,7 @@ authors = [
   { name = "Jens Olsson", email = "jens.olsson@chalmersindustriteknik.se" },
   { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 classifiers = [
   "Intended Audience :: Science/Research",
   "Programming Language :: Python :: 3",
@@ -35,7 +35,7 @@ dependencies = [
   "glfw",
   "imgui",
   "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
-  "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop"
+  "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop",
 ]
 
 [project.optional-dependencies]
