--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
            curl -L -X POST \
            -H "Accept:application/vnd.github+json" \
-           -H "Authorization:token ${{ secrets.TOKEN }}" \
+           -H "Authorization:token ${{ secrets.CI_TOKEN }}" \
            -H "X-GitHub-Api-Version:2022-11-28" \
            https://api.github.com/repos/dtcc-platform/dtcc/actions/workflows/newCI.yml/dispatches \
            -d '{"ref":"develop","inputs":{"Variable":"a new one"}}'
