--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -30,7 +30,6 @@ jobs:
            -H "Authorization:token ${{ secrets.CI_TOKEN }}" \
            -H "X-GitHub-Api-Version:2022-11-28" \
            https://api.github.com/repos/dtcc-platform/dtcc/actions/workflows/newCI.yml/dispatches \
-           #-d '{"ref":"develop","inputs":{"Variable":"a new one"}}'
-           -d '{"ref":"develop","inputs":{}}'
+           -d '{"ref":"develop"}'
 
     
