--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   push:
     branches:
-      - develop
+      - release
   release:
     types:
       - published
@@ -16,7 +16,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build wheels
         #uses: pypa/cibuildwheel@v2.15.0
-        run: python -m pip wheel . -w ./wheelhouse/ && pwd && ls -altR 
+        run: python -m pip wheel . -w ./wheelhouse/ 
 
       - uses: actions/upload-artifact@v3
         with:
