--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "setuptools-scm", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.7.8"
+version = "0.7.17"
 name = "dtcc-viewer"
 description = "DTCC Viewer"
 readme = "README.md"
@@ -34,8 +34,8 @@ dependencies = [
   "pillow",
   "glfw",
   "imgui",
-  "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
-  "dtcc-io@git+https://github.com/dtcc-platform/dtcc-io.git@develop",
+  "dtcc-model >= 0.7.17",
+  "dtcc-io >= 0.7.17",
 ]
 
 [project.optional-dependencies]
