--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
   { name = "Jens Olsson", email = "jens.olsson@chalmersindustriteknik.se" },
   { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.13"
 classifiers = [
   "Intended Audience :: Science/Research",
   "Programming Language :: Python :: 3",
