--- a/.github/workflows/ci-build-tests.yml
+++ b/.github/workflows/ci-build-tests.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-22.04 
+    runs-on: ubuntu-22.04
     #Placeholder for Docker on our Amazon AWS Runner
     #container:
     #  image: ubuntu-latest
@@ -30,7 +30,7 @@ jobs:
     #- name: cmake install
     #run: cd ${{ github.event.repository.name }}/build/ && cmake .. && make all && sudo make install && cd ..
     - name: run tests
-      run: sudo apt-get install python3-opengl && pip install pytest && cd ${{ github.event.repository.name }}/tests && pwd && ls -alt && sh run-tests
+      run: sudo apt-get install python3-opengl && pip install pytest && cd ${{ github.event.repository.name }}/tests && pwd && ls -alt && pytest
     - name: cleanup op
       if: always()
       run : sudo find /Runner/Runner/actions-runner/_work/${{ github.event.repository.name }}/. -name . -o -prune -exec rm -rf -- {} + || true
