--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "setuptools-scm", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.7.80"
+version = "0.9.0dev"
 name = "dtcc-viewer"
 description = "DTCC Viewer"
 readme = "README.md"
