--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "setuptools-scm", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.9.2dev"
+version = "0.9.2"
 name = "dtcc-viewer"
 description = "DTCC Viewer"
 readme = "README.md"
@@ -34,7 +34,7 @@ dependencies = [
   "glfw",
   "imgui",
   "tqdm>=4.66.1",
-  "dtcc-core@git+https://github.com/dtcc-platform/dtcc-core.git@develop", 
+  "dtcc-core", 
 ]
 
 [project.optional-dependencies]
