Updated examples in scripts/main.py to work with new code structure

--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,16 @@ dtcc-demo-data/
 *.tif
 *.vtk
 *.vtu
+
 *.obj
+!CitySurface.obj
+
 *.mtl
-!cube_pc.csv
 
 *.city.json
 *.json
+!denhaag.city.json
+
 *.html
 *.txt
 
