--- a/pyimgui/pyproject.toml
+++ b/pyimgui/pyproject.toml
@@ -2,14 +2,24 @@
 
 build-verbosity = 1
 
-test-command = ["cd {package}", "py.test -v --color=yes"]
+test-command = [
+    "cd {package}", 
+    "py.test -v --color=yes"
+]
 before-test = "python -m pip install -r doc/requirements-test.txt"
 
-environment = { FROM_APPVEYOR = "true", COVERALLS_REPO_TOKEN = "$COVERALLS_REPO_TOKEN" }
+environment = {FROM_APPVEYOR="true", COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN"}
 
 [tool.cibuildwheel.macos]
-environment = { LC_ALL = "en_US.UTF-8", LANG = "en_US.UTF-8" }
+environment = { LC_ALL="en_US.UTF-8", LANG="en_US.UTF-8" }
 
 [build-system]
-requires = ["Cython>=3.0.1", "PyOpenGL", "glfw", "wheel", "click", "setuptools"]
+requires = [
+    "Cython>=3.0",
+    "PyOpenGL",
+    "glfw",
+    "wheel",
+    "click",
+    "setuptools",
+]
 build-backend = "setuptools.build_meta"
