--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "setuptools-scm", "wheel"]
+requires = ["setuptools>=74.1", "setuptools-scm", "wheel", "Cython>=3.0.1", "PyOpenGL", "glfw", "click"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -11,7 +11,7 @@ authors = [
   { name = "Jens Olsson", email = "jens.olsson@chalmersindustriteknik.se" },
   { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
 ]
-requires-python = ">=3.10,<3.13"
+requires-python = ">=3.10,<3.14"
 classifiers = [
   "Intended Audience :: Science/Research",
   "Programming Language :: Python :: 3",
@@ -32,11 +32,13 @@ dependencies = [
   "pyrr",
   "pillow",
   "glfw",
-  "imgui @ ./pyimgui",
   "tqdm>=4.66.1",
   "dtcc-core@git+https://github.com/dtcc-platform/dtcc-core.git@develop",
 ]
 
-[project.optional-dependencies]
-test = ["pytest"]
-dev = ["easydev", "black"]
+[tool.setuptools]
+package-dir = {"" = "src", "imgui" = "pyimgui/imgui"}
+
+[tool.setuptools.packages.find]
+where = ["src", "pyimgui"]
+include = ["dtcc_viewer*", "imgui*"]
