--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=74.1", "setuptools-scm", "wheel", "Cython>=3.0.1", "PyO
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.9.4dev"
+version = "0.9.2dev"
 name = "dtcc-viewer"
 description = "DTCC Viewer"
 readme = "README.md"
@@ -30,6 +30,7 @@ dependencies = [
   "pyopengl",
   "pyglfw",
   "pyrr",
+  "pvlib",
   "pillow",
   "glfw",
   "tqdm>=4.66.1",
