--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=74.1", "setuptools-scm", "wheel", "Cython>=3.0.1", "PyO
 build-backend = "setuptools.build_meta"
 
 [project]
-version = "0.9.4dev"
+version = "0.9.4"
 name = "dtcc-viewer"
 description = "DTCC Viewer"
 readme = "README.md"
@@ -34,7 +34,7 @@ dependencies = [
   "pillow",
   "glfw",
   "tqdm>=4.66.1",
-  "dtcc-core@git+https://github.com/dtcc-platform/dtcc-core.git@release/0.9.4",
+  "dtcc-core@git+https://github.com/dtcc-platform/dtcc-core.git@main",
 ]
 
 [tool.setuptools]
