--- a/.github/workflows/ci-build-tests.yml
+++ b/.github/workflows/ci-build-tests.yml
@@ -15,7 +15,9 @@ jobs:
     steps:
       # 1) Check out repository
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       # 2) Set up Python
       - name: Set up Python
