--- a/.github/workflows/ci-build-tests.yml
+++ b/.github/workflows/ci-build-tests.yml
@@ -10,12 +10,14 @@ jobs:
   build-and-test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       # 1) Check out repository
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       # 2) Set up Python
       - name: Set up Python
