--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -10,21 +10,23 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.11, 3.12]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: [ 3.11, 3.12 ]
     
     steps:
       - uses: actions/checkout@v3
-      
+        with:
+          submodules: recursive
+
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip pytest
           python -m pip install .
-      
+
       - name: Run tests
         if: runner.os != 'Windows'
         run: |
@@ -36,6 +38,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - uses: actions/setup-python@v4
         with:
@@ -58,7 +62,7 @@ jobs:
   # 3) Upload to PyPI only when a GitHub release is published
   upload_pypi:
     name: Upload to PyPI
-    needs: [test, build_dist]
+    needs: [ test, build_dist ]
     runs-on: ubuntu-latest
     #if: github.event_name == 'release' && github.event.action == 'published'
     steps:
