--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
   "pillow",
   "glfw",
   "tqdm>=4.66.1",
-  "dtcc-core@git+https://github.com/dtcc-platform/dtcc-core.git@develop",
+  "dtcc-core>=0.95",
 ]
 
 [tool.setuptools]
