--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -1,79 +1,73 @@
-name: Python-only CI and Publish
+name: Build and upload to PyPI
 
 on:
   workflow_dispatch:
 
 jobs:
-  # 1) Test the code on multiple Python versions + OSes
-  test:
-    name: Tests on ${{ matrix.os }} - Python ${{ matrix.python-version }}
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ 3.12 ]
-    
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
       - uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.12"
 
-      - name: Install dependencies
+      - name: Upgrade pip and install cibuildwheel
         run: |
-          python -m pip install --upgrade pip pytest
-          python -m pip install .
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install cibuildwheel==2.22.0
 
-      - name: Run tests
-        if: runner.os != 'Windows'
+      - name: Build wheels
+        env:
+          CIBW_BUILD: cp310-* cp311-* cp312-* cp313-*
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_28
+          CIBW_SKIP: "*-musllinux_*"
+          CIBW_ARCHS_LINUX: x86_64
+          CIBW_ARCHS_MACOS: arm64
+          CIBW_REPAIR_WHEEL_COMMAND_MACOS: >
+            delocate-wheel --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}
+          CIBW_REPAIR_WHEEL_COMMAND_LINUX: >
+            auditwheel repair --plat manylinux_2_28_x86_64 -w {dest_dir} {wheel}
+          CIBW_BEFORE_BUILD_LINUX: |
+            yum install -y gcc gcc-c++ make && python -m pip install --upgrade pip setuptools wheel Cython auditwheel patchelf
+        run: cibuildwheel --output-dir wheelhouse
+
+      - name: Upload to PyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          pytest tests/ --maxfail=1 --disable-warnings --verbose
+          python -m pip install --upgrade twine
+          twine upload wheelhouse/*.whl --skip-existing
 
-  # 2) Build a universal wheel + sdist on a single OS
-  build_dist:
-    name: Build universal wheel and sdist
+  build_sdist:
+    name: Build source distribution
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.12"  # your 'build' Python
+          python-version: "3.12"
 
-      - name: Install build tooling
+      - name: Build sdist
         run: |
-          python -m pip install --upgrade pip
-          pip install build
+          python -m pip install build
+          python -m build --sdist
 
-      - name: Build wheel & sdist
+      - name: Upload sdist to PyPI
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          python -m build
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: dist-artifacts
-          path: dist/*
-
-  # 3) Upload to PyPI only when a GitHub release is published
-  upload_pypi:
-    name: Upload to PyPI
-    needs: [ test, build_dist ]
-    runs-on: ubuntu-latest
-    #if: github.event_name == 'release' && github.event.action == 'published'
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: dist-artifacts
-          path: dist
-
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.PYPI_TOKEN }}
-          # If you want to publish to TestPyPI first, uncomment:
-          # repository_url: https://test.pypi.org/legacy/
+          python -m pip install --upgrade twine
+          twine upload dist/*.tar.gz --skip-existing
